fix bug with screen jerking when scrollbar disappears

--- a/style/reset.scss
+++ b/style/reset.scss
@@ -15,6 +15,10 @@ html, body {
 
 body.active {
   overflow: hidden;
+
+  @media screen and (min-width: 1023px) {
+    margin-right: 22px;
+  }
 }
 
 img {
